--- a/app/src/main/res/xml-v14/preferences.xml
+++ b/app/src/main/res/xml-v14/preferences.xml
@@ -10,6 +10,15 @@
         android:switchTextOn="@string/settings_status_on"
         android:title="@string/settings_status_title" />
 
+    <SwitchPreference
+        android:defaultValue="false"
+        android:key="schedule"
+        android:summaryOff="@string/settings_schedule_off_summary"
+        android:summaryOn="@string/settings_schedule_on_summary"
+        android:switchTextOff="@string/settings_schedule_off"
+        android:switchTextOn="@string/settings_schedule_on"
+        android:title="@string/settings_schedule_title" />
+
     <EditTextPreference
         android:key="id"
         android:title="@string/settings_id_title" />
