--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -8,6 +8,13 @@
         android:summaryOn="@string/settings_status_on_summary"
         android:title="@string/settings_status_title" />
 
+    <CheckBoxPreference
+        android:defaultValue="false"
+        android:key="schedule"
+        android:summaryOff="@string/settings_schedule_off_summary"
+        android:summaryOn="@string/settings_schedule_on_summary"
+        android:title="@string/settings_schedule_title" />
+
     <EditTextPreference
         android:key="id"
         android:title="@string/settings_id_title" />
